# async-consumer

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/async_consumer/: __init__.py  consumer.py  sqs_service.py
src/async_sqs_consumer/: __init__.py  _types.py  event.py  message_bus.py  sns_service.py
