[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "async-consumer"
version = "0.1.1"
description = "Async consumer with MessageBus dispatch"
authors = [
    {name = "Vlad Boiko", email = "devduo.project@gmail.com"},
]
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "aioboto3>=14.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/async_consumer"]
